updated bower packages and extracted routes

--- a/AngularJsWithTypescript/index.html
+++ b/AngularJsWithTypescript/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -36,16 +36,16 @@
 
     <div data-ng-view></div>
 
-    <!-- bower:js -->
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-    <!-- endbower -->
 
     <!-- inject:js -->
     <script src="app/application.js"></script>
     <script src="app/Home/home.module.js"></script>
+    <script src="app/Home/home.routes.js"></script>
     <script src="app/Contact/contact.module.js"></script>
+    <script src="app/Contact/contact.routes.js"></script>
+    
     
     <script src="app/Home/Services/person.dataService.js"></script>
     <script src="app/Models/person.js"></script>
